refact(proto): switch from XEdDSA to Ed25519->X25519
1) Random signatures required by XEdDSA makes handle recovery from private key impossible
2) XEdDSA is a complex primitive, requiring features not present in many crypto libraries
3) This pushes users towards poorly unmaintained implementations, increasing risk of supply chain attacks

Ed25519 to X25519 is a simple, safe operation, included out-of-box in modern crypto libraries, making it an superior choice.

Because the inverse isn't one-to-one, this change carries the additoinal cost of sending the signer's 256 bit Ed25519 key over the wire.

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 ed25519 = { workspace = true, features = ["serde"] }
+curve25519 = { package = "curve25519-dalek", version = "4.1" }
 x25519.workspace = true
 xeddsa = "1.0"
+
 
 blake2 = "0.10"
 sha2 = "0.10"
