refact(client): remove statics, use clap, share keychain via mutex

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -18,3 +18,5 @@ rmp-serde.workspace = true
 thiserror.workspace = true
 base58.workspace = true
 once_cell.workspace = true
+
+clap = { version = "4", features = ["derive", "env"] }
