refact(server): use clap, remove statics

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,6 +17,4 @@ tracing-subscriber.workspace = true
 rmp-serde.workspace = true
 thiserror.workspace = true
 base58.workspace = true
-once_cell.workspace = true
-
-clap = { version = "4", features = ["derive", "env"] }
+clap.workspace = true
