--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ tracing-subscriber = "0.3"
 thiserror = "2.0"
 base58 = "0.2.0"
 uuid = "1.19"
-once_cell = "1.21"
+clap = { version = "4", features = ["derive", "env"] }
