--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,4 +16,4 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 uuid.workspace = true
 rmp-serde.workspace = true
-once_cell.workspace = true
+clap.workspace = true
