feat(common)!: recovery phrases
Keys are now generated from 128 bit seeds, stretched by Blake2s.

The seed is encoded as 10 proquints (a human-friendly base) with another 2 for Reed-Solomon error correction/detection, before being discarded.

Existing users can keep using their previous keyfiles or regenerate them to benefit from this feature.

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -29,6 +29,9 @@ futures.workspace = true
 bytes.workspace = true
 
 base58.workspace = true
+proquint = "0.1"
+reed-solomon = "0.2"
+
 uuid.workspace = true
 once_cell = "1.21"
 thiserror.workspace = true
